@@ -46,21 +46,6 @@
 #include "util/config_file.h"
 #include "util/net_help.h"
 
-int
-acl_list_cmp(const void* k1, const void* k2)
-{
-	struct acl_addr* n1 = (struct acl_addr*)k1;
-	struct acl_addr* n2 = (struct acl_addr*)k2;
-	int r = sockaddr_cmp_addr(&n1->addr, n1->addrlen, &n2->addr, 
-		n2->addrlen);
-	if(r != 0) return r;
-	if(n1->net < n2->net)
-		return -1;
-	if(n1->net > n2->net)
-		return 1;
-	return 0;
-}
-
 struct acl_list* 
 acl_list_create()
 {
@@ -82,7 +67,6 @@ acl_list_delete(struct acl_list* acl)
 	if(!acl) 
 		return;
 	regional_destroy(acl->region);
-	free(acl->tree);
 	free(acl);
 }
 
@@ -96,13 +80,8 @@ acl_list_insert(struct acl_list* acl, struct sockaddr_storage* addr,
 		sizeof(struct acl_addr));
 	if(!node)
 		return 0;
-	node->node.key = node;
-	memcpy(&node->addr, addr, addrlen);
-	node->addrlen = addrlen;
-	node->net = net;
-	node->parent = NULL;
 	node->control = control;
-	if(!rbtree_insert(acl->tree, &node->node)) {
+	if(!addr_tree_insert(&acl->tree, &node->node, addr, addrlen, net)) {
 		if(complain_duplicates)
 			verbose(VERB_QUERY, "duplicate acl address ignored.");
 	}
@@ -155,42 +134,11 @@ read_acl_list(struct acl_list* acl, struct config_file* cfg)
 	return 1;
 }
 
-/** initialise parent pointers in the tree */
-static void
-acl_list_init_parents(struct acl_list* acl)
-{
-	struct acl_addr* node, *prev = NULL, *p;
-	int m;
-	RBTREE_FOR(node, struct acl_addr*, acl->tree) {
-		node->parent = NULL;
-		if(!prev || prev->addrlen != node->addrlen) {
-			prev = node;
-			continue;
-		}
-		m = addr_in_common(&prev->addr, prev->net, &node->addr, 
-			node->net, node->addrlen);
-		/* sort order like: ::/0, 1::/2, 1::/4, ... 2::/2 */
-		/* find the previous, or parent-parent-parent */
-		for(p = prev; p; p = p->parent)
-			if(p->net <= m) {
-				/* ==: since prev matched m, this is closest*/
-				/* <: prev matches more, but is not a parent,
-				* this one is a (grand)parent */
-				node->parent = p;
-				break;
-			}
-		prev = node;
-	}
-}
-
 int 
 acl_list_apply_cfg(struct acl_list* acl, struct config_file* cfg)
 {
 	regional_free_all(acl->region);
-	free(acl->tree);
-	acl->tree = rbtree_create(acl_list_cmp);
-	if(!acl->tree)
-		return 0;
+	addr_tree_init(&acl->tree);
 	if(!read_acl_list(acl, cfg))
 		return 0;
 	/* insert defaults, with '0' to ignore them if they are duplicates */
@@ -206,7 +154,7 @@ acl_list_apply_cfg(struct acl_list* acl, struct config_file* cfg)
 		if(!acl_list_str_cfg(acl, "::ffff:127.0.0.1", "allow", 0))
 			return 0;
 	}
-	acl_list_init_parents(acl);
+	addr_tree_init_parents(&acl->tree);
 	return 1;
 }
 
@@ -214,33 +162,9 @@ enum acl_access
 acl_list_lookup(struct acl_list* acl, struct sockaddr_storage* addr,
         socklen_t addrlen)
 {
-	/* lookup in the tree */
-	rbnode_t* res = NULL;
-	struct acl_addr* result;
-	struct acl_addr key;
-	key.node.key = &key;
-	memcpy(&key.addr, addr, addrlen);
-	key.addrlen = addrlen;
-	key.net = (addr_is_ip6(addr, addrlen)?128:32);
-	if(rbtree_find_less_equal(acl->tree, &key, &res)) {
-		/* exact */
-		result = (struct acl_addr*)res;
-		return result->control;
-	} else {
-		/* smaller element (or no element) */
-		int m;
-		result = (struct acl_addr*)res;
-		if(!result || result->addrlen != addrlen)
-			return acl_deny;
-		/* count number of bits matched */
-		m = addr_in_common(&result->addr, result->net, addr, 
-			key.net, addrlen);
-		while(result) { /* go up until addr is inside netblock */
-			if(result->net <= m)
-				return result->control;
-			result = result->parent;
-		}
-	}
+	struct acl_addr* r = (struct acl_addr*)addr_tree_lookup(&acl->tree,
+		addr, addrlen);
+	if(r) return r->control;
 	return acl_deny;
 }
 
