@@ -1,6 +1,7 @@
 4 September 2008: Wouter
 	- scrubber scrubs away private addresses.
 	- test for private addresses. man page entry.
+	- code refactored for name and address tree lookups.
 
 3 September 2008: Wouter
 	- options for 'DNS Rebinding' protection: private-address and
